# Robotics-AI

./: README.md
src/vla_orchestrator/: setup.py
src/vla_orchestrator/vla_orchestrator/: orchestrator.py  orchestrator_node.py  safety_node.py  task_manager_node.py
src/vla_planner/: llm_planner_node.py  setup.cfg  setup.py
src/vla_planner/vla_planner/: llm_planner_node.py
vla_arm_ws/: .gitignore
vla_arm_ws/src/arm_bringup/: package.xml  setup.py
vla_arm_ws/src/arm_bringup/config/: controllers.yaml
vla_arm_ws/src/arm_bringup/launch/: spawn_arm.launch.py
vla_arm_ws/src/arm_bringup/scripts/: generate_panda_inertia.py
vla_arm_ws/src/arm_bringup/urdf/: panda_gazebo.urdf.xacro  panda_inertia.urdf
vla_arm_ws/src/arm_bringup/worlds/: scene.world
vla_arm_ws/src/vla_bringup/: package.xml  setup.cfg  setup.py
vla_arm_ws/src/vla_bringup/launch/: demo.launch.py
vla_arm_ws/src/vla_control/: package.xml  setup.py
vla_arm_ws/src/vla_control/vla_control/: control_action_server.py
vla_arm_ws/src/vla_interfaces/: CMakeLists.txt  package.xml
vla_arm_ws/src/vla_interfaces/action/: ExecuteAction.action
vla_arm_ws/src/vla_interfaces/srv/: DetectObjects.srv  PlanTask.srv
vla_arm_ws/src/vla_orchestrator/: package.xml  setup.py
vla_arm_ws/src/vla_orchestrator/vla_orchestrator/: mock.py  orchestrator.py  state_machine.py
vla_arm_ws/src/vla_perception/: README.md  package.xml  setup.py
vla_arm_ws/src/vla_perception/vla_perception/: perception_node.py
vla_arm_ws/src/vla_planner/: package.xml  setup.py
